Bugfix: fixed font size for header button
O nevices with a custom font size, the text was too big and overlapped the borders

--- a/app/components/demopage/header/style.scss
+++ b/app/components/demopage/header/style.scss
@@ -43,6 +43,7 @@ header {
 
     &::after {
         color: $color-medium;
+        font-size: 16px;
         font-weight: normal;
         line-height: $logo-size;
         content: 'home';
